[package]
name = "android-bootimage"
version = "0.2.0"
authors = ["Jeroen Bollen <contact@jeroenbollen.eu>", "Dom Rodriguez <shymega@shymega.org.uk>"]
description = "Library-first crate, aiming to support both Android and Samsung-based boot images, and headers, with `no_std` for support on embedded systems."
homepage = "https://gitlab.com/shymega/android-bootimage"
repository = "https://gitlab.com/shymega/android-bootimage"
readme = "README.md"
keywords = ["android", "tool", "bootimage", "boot-image", "no-std"]
categories = ["command-line-utilities", "data-structures"]
license = "Unlicense"

[features]
default = ["std"]
std = ["byteorder/std"]

[dependencies]
byteorder = { version = "1", default-features = false }
core2 = "0.4.0"
thiserror-no-std = "2.0.2"
